crates/anodized/tests/compile_fail/struct_field_type_err.rs
#![no_main]

use anodized::spec;

#[spec(maintains: self.x != "text")]
struct Point {
    x: f32,
    y: f32,
}
