crates/anodized/tests/compile_fail/struct_field_type_err.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/struct_field_type_err.rs:5:29
  |
5 | #[spec(maintains: self.x != "text")]
  |                   ------    ^^^^^^ expected `f32`, found `&str`
  |                   |
  |                   expected because this is `f32`
